Cambios en los imputs de tablas

--- a/src/app/ag-grid/gender-renderer/gender-renderer.component.html
+++ b/src/app/ag-grid/gender-renderer/gender-renderer.component.html
@@ -1,6 +1,7 @@
 <span
   class="insinia"
   ngxTippy
+  [tippyName] = "ran"
   [ngxTippy]="nivel"
   [tippyProps]="{
     arrow: false,
@@ -9,6 +10,7 @@
 >
   <span
     ngxTippy
+    [tippyName] = "al"
     [ngxTippy]="value"
     [tippyProps]="{
       arrow: false,
