--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,7 +1,11 @@
 <div class="modal fade" [attr.id]="uniqueId" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog shadow">
     <div class="modal-content">
-      <div class="modal-header" [class.bg-color]="!isAlert" [class.alert]="isAlert" >
+      <div
+        class="modal-header"
+        [class.bg-color]="!isAlert"
+        [class.alert]="isAlert"
+      >
         <h3 class="modal-title m-0">{{ title }}</h3>
         <button
           type="button"
@@ -14,3 +18,14 @@
     </div>
   </div>
 </div>
+
+<!-- 
+  <modal [title]="modalTitle" [uniqueId]="modalId">
+  <div class="modal-footer">
+    <button type="button" class="btn btn-sm btn-color text-light">Test</button>
+    <button type="button" class="btn btn-sm btn-dark" data-bs-dismiss="modal">
+      Close
+    </button>
+  </div>
+</modal>
+ -->
