--- a/src/app/ag-grid/gender-renderer/gender-renderer.component.html
+++ b/src/app/ag-grid/gender-renderer/gender-renderer.component.html
@@ -1,11 +1,11 @@
 <span
-  class="insinia"
+  class="insiniaSpan"
   ngxTippy
   [tippyName] = "ran"
   [ngxTippy]="nivel"
   [tippyProps]="{
     arrow: false,
-    placement: 'top'
+    placement: 'left'
   }"
 >
   <span
@@ -14,7 +14,7 @@
     [ngxTippy]="value"
     [tippyProps]="{
       arrow: false,
-      placement: 'bottom'
+      placement: 'right'
     }"
   >
     <img [src]="imageSource" class="insinia" /> </span
