Historial es funcional sin seleccion multiple

--- a/src/app/historial/historial.component.css
+++ b/src/app/historial/historial.component.css
@@ -24,3 +24,14 @@
 .bt-action {
   margin: 0px;
 }
+
+.historyTable{
+  width: 95vw;
+   height: 15rem;
+}
+
+
+
+.tableContainer{
+  margin-top: 5rem;
+}
