Actualizando error para poder coger png

--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -466,7 +466,7 @@
                 name="profilePicture"
                 id="profilePicture"
                 type="file"
-                accept="image/divng, image/jpg, image/jpeg, image/svg"
+                accept="image/png, image/jpg, image/jpeg, image/svg"
                 class="hide"
                 (change)="readURL($event)"
               />
