--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,9 +1,11 @@
-.backgroundRegister {
-  padding: 0;
-  width: 100vw;
-  height: 100vh;
-  background: rgb(82, 6, 214);
-  background-color: rgb(109, 48, 243);
+
+.fullscreen {
+	overflow: hidden;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0
 }
 .container-register {
   width: 25em;
@@ -61,9 +63,7 @@ input::-webkit-input-placeholder {
 }
 
 .containerRegister {
-  position: absolute;
-  margin-top: 1rem;
-  width: 100%;
+  margin-top: 2rem;
 }
 
 .next {
@@ -120,8 +120,11 @@ input::-webkit-input-placeholder {
 }
 
 .nextBackButtons {
-  max-width: 25rem;
+  border-color: var(--corp-color-one);
+  max-width: 4rem;
   margin-bottom: 1rem;
+  background-color: var(--corp-color-one);
+  width: 41.666667% !important;
 }
 
 /* 
