--- a/src/app/user-ranking-dev/user-ranking-dev.component.html
+++ b/src/app/user-ranking-dev/user-ranking-dev.component.html
@@ -6,53 +6,68 @@
     </div>
     <div class="offcanvas-body px-0">
         <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-start" id="menu">
-            <li class="nav-item">
+            
 
-               <div class="card mb-3" >
-  <div class="row no-gutters">
-    <div class="col-md-4">
-      <img src="https://definicion.de/wp-content/uploads/2009/12/paisaje-1.jpg" class="card-img" alt="...">
+            <li class="nav-item">
+               <div class="card mb-0" >
+                   <div *ngFor="let item of rankings">
+
+
+<div class="m-4 ranking-card" (click)="rankingData(item.id)">
+    <div class="card" style="max-width: 500px;">
+        <div class="row g-0">
+            <div class="col-sm-5" style="background: #868e96;">
+                <img src="data:image/png;base64,{{ item.logo }}" class="card-img-top h-100" alt="...">
+            </div>
+            <div class="col-sm-7">
+                <div class="card-body">
+                    <h2 class="card-title">{{item.name}}</h2>
+                    <p class="card-text text-truncate" style="max-width: 15rem;">{{item.description}}</p>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-md-8 ">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text text-truncate" style="max-width: 11rem;">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      </div>
-    </div>
+</div>
+        
+
+
   </div>
 </div>
                   
-               
-            </li>
-            <li>
-                <a href="#submenu1" data-bs-toggle="collapse" class="nav-link text-truncate">
-                    <i class="fs-5 bi-speedometer2"></i><span class="ms-1 d-none d-sm-inline">Dashboard</span> </a>
-            </li>
-            <li>
-                <a href="#" class="nav-link text-truncate">
-                    <i class="fs-5 bi-table"></i><span class="ms-1 d-none d-sm-inline">Orders</span></a>
-            </li>
-            <li class="dropdown">
+        
+ <li class="dropdown">
                 <a href="#" class="nav-link dropdown-toggle  text-truncate" id="dropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="fs-5 bi-bootstrap"></i><span class="ms-1 d-none d-sm-inline">Bootstrap</span>
+                    <i class="fs-5 bi-bootstrap"></i><span class="ms-1 d-none d-sm-inline">Unirse a un ranking</span>
                 </a>
-                <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdown">
-                    <li><a class="dropdown-item" href="#">New project...</a></li>
-                    <li><a class="dropdown-item" href="#">Settings</a></li>
-                    <li><a class="dropdown-item" href="#">Profile</a></li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li><a class="dropdown-item" href="#">Sign out</a></li>
+                <ul class="dropdown-menu text-small shadow add-ranking-container" aria-labelledby="dropdown">
+                    
+                    <li> <form
+        class="add-ranking"
+        [@fadeIn]
+        [formGroup]="this.addRanking"
+      >
+        <input
+          formControlName="rankingId"
+          class="add-ranking-input"
+          type="text"
+        />
+        <div
+          type="submit"
+          class=" bi bi-plus-circle-dotted add-ranking-button"
+          (click)="addRankingByCode()"
+        ></div>
+      </form></li>
                 </ul>
             </li>
+
+
             <li>
-                <a href="#" class="nav-link text-truncate">
-                    <i class="fs-5 bi-grid"></i><span class="ms-1 d-none d-sm-inline">Products</span></a>
+                <a [routerLink]="['/create']" routerLinkActive="router-link-active"  data-bs-toggle="collapse" class="nav-link text-truncate">
+                    <i class="fs-5 bi-speedometer2"></i><span class="ms-1 d-none d-sm-inline">Crear</span> </a>
             </li>
             <li>
-                <a href="#" class="nav-link text-truncate">
-                    <i class="fs-5 bi-people"></i><span class="ms-1 d-none d-sm-inline">Customers</span> </a>
+                <a [routerLink]="['/login']" (click)="clearLocalStorage()" routerLinkActive="router-link-active"  data-bs-toggle="collapse" class="nav-link text-truncate">
+                    <i class="fs-5 bi-speedometer2"></i><span class="ms-1 d-none d-sm-inline">Salir</span> </a>
             </li>
         </ul>
     </div>
@@ -64,7 +79,28 @@
             <button class="btn expandbutton" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" role="button">
                 <i class="bi bi-arrow-right-square-fill fs-3" data-bs-toggle="offcanvas" data-bs-target="#offcanvas"></i>
             </button>
-            Content..
+             <div
+        class="row justify-content-center"
+      >
+      
+    <div class="d-flex justify-content-end" *ngIf="rankingSelect">
+        
+            <ag-grid-angular
+              class="ag-theme-alpine ranking table-responsive "
+              [columnDefs]="columnDefs"
+              [rowData]="rowData"
+              id="dataTable"
+              [defaultColDef]="defaultColDef"
+              resizable="true"
+              [animateRows]="true"
+              (cellValueChanged)="onCellValueChanged($event)"
+              (onGridSizeChanged)="onGridSizeChanged($event)"
+              (gridReady)="onGridReady($event)"
+              [@fadeIn]
+            >
+            </ag-grid-angular>
+        </div>
+        </div>
         </div>
     </div>
 </div>
