Cambio de tabla segun ranking de moderador o usuario

--- a/src/app/user-ranking-dev/user-ranking-dev.component.html
+++ b/src/app/user-ranking-dev/user-ranking-dev.component.html
@@ -131,7 +131,7 @@
         <div class="d-flex justify-content-end" *ngIf="rankingSelect">
           <ag-grid-angular
             class="ag-theme-alpine ranking table-responsive"
-            [columnDefs]="columnDefs"
+            [columnDefs]="columnDefsSelect"
             [rowData]="rowData"
             id="dataTable"
             [defaultColDef]="defaultColDef"
