--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -67,7 +67,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light btn-nav" routerLink="/login">
+          <a class="nav-link text-light btn-nav" routerLink="/profile">
             <i class="bi icon-lg bi-person-circle"
             [ngxTippy]="'Perfil'"
             [tippyProps]="{
@@ -77,6 +77,19 @@
             ></i>
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link text-light btn-nav">
+            <i class="icon-lg bi bi-lock-fill"
+            [ngxTippy]="'Salir'"
+            [tippyProps]="{
+            arrow: false,
+            placement: 'top'
+            }"
+            ></i>
+          </a>
+        </li>
+        
+
       </ul>
     </div>
   </div>
